test/distributions/corrado/factoryMethods/incompatibleArraySize.1-2.good
incompatibleArraySize.chpl:12: error: halt reached - Domain size mismatch in 'Cyclic.createArray' dimension 0
